--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
 <a href="/dealerships/new"><button class="btn btn-default" type="button">Add Dealership</button></a>
 
-<a href="/dealerships/"><button class="btn btn-default" type="button">See Dealership List</button></a>
+<a href="/dealerships"><button class="btn btn-default" type="button">See Dealership List</button></a>
