--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="page-header">
+        <a href="/">
+          <h5><span class="glyphicon glyphicon-filter" aria-hidden="true"></span>DealerShips Ahoy!</h5>
+        </a>
+      </div>
       <%= yield %>
     </div>
   </body>
